--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 
 /* table */
 #todo-app {
-    margin-top: 800px;
+    margin-top: 900px;
     margin: 0 auto;
     padding: 10px;
     width: 50%;
@@ -19,8 +19,14 @@ body{
     text-align: center;
 }
 
+td{
+    text-align: center;
+}
+
 th{
     font-weight: 500;
+    font-size: 26px;
+    padding: 20px 40px;
 }
 
 .add-button{
@@ -58,8 +64,9 @@ table{
     border-collapse: collapse;
 }
 
-th{
-    padding: 20px 40px;
+.action{
+    display: inline;
+    cursor: pointer;
 }
 
 /* Card styles */
@@ -124,9 +131,10 @@ th{
 .add-task-button{
     position:fixed;
     bottom: 70px;
+    left: 0;
     font-size: 18px;
     padding: 15px 25px;
-    margin-left: 30px;
+    margin-left: 70px;
     border: 2px solid black;
     background-color: white;
     border-radius: 10px;
@@ -147,4 +155,10 @@ th{
 
 .bi-x:hover{
     cursor: pointer;
+}
+
+.danger{
+    margin-left: 25px;
+    color: red;
+    display: none;
 }
